--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jwks-rsa": "^1.7.0",
     "mongoose": "^5.9.3",
     "mongoose-findorcreate": "^3.0.0",
+    "mongoose-paginate": "^5.0.3",
     "npm-run-all": "^4.1.5",
     "passport": "^0.4.1",
     "passport-auth0": "^1.3.2",
