--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.1",
     "react-image": "^2.4.0",
