--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "@auth0/auth0-spa-js": "^1.6.4",
     "auth0-js": "^9.12.2",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^3.4.1",
+    "bootstrap-less": "^3.3.8",
     "jwt-decode": "^2.2.0",
     "mdbootstrap": "^4.14.0",
     "mdbreact": "^4.25.3",
@@ -17,6 +18,7 @@
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.1",
     "react-image": "^2.4.0",
+    "react-js-pagination": "^3.0.3",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
