--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "mdbootstrap": "^4.14.0",
     "mdbreact": "^4.25.3",
     "moment": "^2.24.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.0",
@@ -23,6 +23,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
+    "react-star-ratings": "^2.3.0",
     "react-sticky": "^6.0.3",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
