--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^3.4.1",
     "bootstrap-less": "^3.3.8",
+    "connected-react-router": "^6.8.0",
     "jwt-decode": "^2.2.0",
     "mdbootstrap": "^4.14.0",
     "mdbreact": "^4.25.3",
