--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.1",
     "react-image": "^2.4.0",
