--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-image": "^2.4.0",
     "react-js-pagination": "^3.0.3",
     "react-moment": "^0.9.7",
+    "react-player": "^2.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
