--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,8 @@
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "tachyons": "^4.11.1",
     "uuid": "^3.4.0"
