--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.9.21",
     "mongoose-findorcreate": "^3.0.0",
     "mongoose-paginate": "^5.0.3",
+    "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "passport": "^0.4.1",
     "passport-auth0": "^1.3.3",
