--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,3 +1,6 @@
 {
-    "API_KEY": "8fb61d9f021e57975ac7a2ef25b640a7"
+    "API_KEY": "8fb61d9f021e57975ac7a2ef25b640a7",
+    "domain": "square-unit-4148.us.auth0.com",
+    "clientId": "gapUUawQ7TPSHlULSmROdZ55SUesnuMA",
+    "audience": "https://square-unit-4148.us.auth0.com/api/v2/"
 }
