--- a/client/src/config.json
+++ b/client/src/config.json
@@ -2,5 +2,6 @@
     "API_KEY": "8fb61d9f021e57975ac7a2ef25b640a7",
     "domain": "square-unit-4148.us.auth0.com",
     "clientId": "gapUUawQ7TPSHlULSmROdZ55SUesnuMA",
-    "audience": "https://square-unit-4148.us.auth0.com/api/v2/"
+    "audience": "https://square-unit-4148.us.auth0.com/api/v2/",
+    "redirectUri": "http://localhost:3000/movies"
 }
