--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^3.4.1",
     "bootstrap-less": "^3.3.8",
     "connected-react-router": "^6.8.0",
+    "history": "^5.0.0",
     "jwt-decode": "^2.2.0",
     "mdbootstrap": "^4.19.1",
     "mdbreact": "^4.27.0",
