--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^1.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
+    "react-fontawesome": "^1.7.1",
     "react-google-login": "^5.1.20",
     "react-image": "^2.4.0",
     "react-js-pagination": "^3.0.3",
