--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "concurrently": "^5.2.0",
     "config": "^3.3.1",
@@ -22,6 +23,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
+    "express-openid-connect": "^2.0.0",
     "express-session": "^1.17.1",
     "express-validator": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
