--- a/client/package.json
+++ b/client/package.json
@@ -61,5 +61,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://localhost:5000/",
+  "devDependencies": {
+    "webpack": "^4.42.0",
+    "webpack-cli": "^4.2.0"
+  }
 }
