--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-jwt-authz": "^2.4.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.6.0",
+    "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.11.0",
     "mongoose": "^5.9.21",
