--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,12 @@
 {
-  "version": "0.1.0",
-  "configurations": [
-      {
-          "name": "Launch localhost",
-          "type": "chrome",
-          "request": "launch",
-          "url": "http://localhost:3000/  ",
-          "webRoot": "${workspaceFolder}"
-      },
-      {
-          "name": "Launch index.html",
-          "type": "chrome",
-          "request": "launch",
-          "file": "${workspaceFolder}/index.html"
-      },
-  ]
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Chrome",
+            "type": "chrome",
+            "request": "launch",
+            "url": "http://localhost:3000",
+            "webRoot": "${workspaceRoot}/src"
+        }
+    ]
 }
