--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "-": "0.0.1",
     "@auth0/auth0-react": "^1.2.0",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "bootstrap": "^3.4.1",
     "bootstrap-less": "^3.3.8",
     "connected-react-router": "^6.8.0",
@@ -13,6 +13,8 @@
     "history": "^5.0.0",
     "jwt-decode": "^2.2.0",
     "mdbreact": "^4.27.0",
+    "mobx": "^6.0.4",
+    "mobx-react": "^7.0.5",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "npm": "^6.14.8",
